--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        buildConfigField 'String', 'WEATHER_API_KEY', '\"68abd196d74a62e6ef49ca7d7ea0b2e9\"'
+
     }
     buildTypes {
         release {
@@ -23,5 +25,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
+
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+
+    compile 'com.squareup.retrofit2:converter-jackson:2.0.0-beta3'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta3'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
 }
